updated sample name and ports

--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -6,5 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "SqlConnection": "Server=localhost,5434;Database=Sample;User ID=sa;Password=Yukon900;"
+  "SqlConnection": "Server=localhost,5434;Database=World;User ID=sa;Password=Yukon900;"
 }
