--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "SqlConnection": "Server=mssql-graph-db;Database=Sample;User ID=sa;Password=Yukon900;"
+  "SqlConnection": "Server=mssql-graph-db;Database=World;User ID=sa;Password=Yukon900;"
 }
