--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
-  quick-sample-api:
-    image: quick-sample-api
+  world-management-api:
+    image: world-management-api
     build:
       context: ./Api
       dockerfile: Dockerfile
     ports:
-      - "5051:80"
+      - "5053:80"
     depends_on:
       - mssql-graph-db
 
@@ -15,7 +15,7 @@ services:
       context: ./Database
       dockerfile: Dockerfile
     ports:
-      - 5434:1433
+      - 5433:1433
     environment:
       - SA_PASSWORD=Yukon900
       - ACCEPT_EULA=Y
