--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/Api/bin/Debug/netcoreapp3.1/QuickSampleApi.dll",
+            "program": "${workspaceFolder}/Api/bin/Debug/netcoreapp3.1/WorldManagementApi.dll",
             "args": [],
             "cwd": "${workspaceFolder}/Api",
             "stopAtEntry": false,
