--- a/Api/Properties/launchSettings.json
+++ b/Api/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "QuickSampleApi": {
+    "WorldManagementApi": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "",
