Added rabbit mq services to project

--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -6,5 +6,23 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "SqlConnection": "Server=localhost,5434;Database=World;User ID=sa;Password=Yukon900;"
+  "SqlConnection": "Server=localhost,5434;Database=World;User ID=sa;Password=Yukon900;",
+  "RabbitMQSettings": {
+    "host": "localhost",
+    "username": "guest",
+    "password": "guest",
+    "homeExchange": "world_exchange_main",
+    "messageCheckIntervalInSeconds": 1.0,
+    "numberOfConnectionRetries": 1,
+    "connectionRetryInterval": 5,
+    "autoRecoveryInterval": 10,
+    "exchanges": {
+      "worldExchange": "people_exchange_main",
+      "karmaExchange": "karma_exchange_main"
+    },
+    "listeningTopics": [
+      "karma_exchange_main.*",
+      "people_exchange_main.*"
+    ]
+  }
 }
