--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,5 +7,23 @@
     }
   },
   "AllowedHosts": "*",
-  "SqlConnection": "Server=mssql-graph-db;Database=World;User ID=sa;Password=Yukon900;"
+  "SqlConnection": "Server=world-management-db;Database=World;User ID=sa;Password=Yukon900;",
+  "RabbitMQSettings": {
+    "host": "karma-rmq",
+    "username": "guest",
+    "password": "guest",
+    "homeExchange": "world_exchange_main",
+    "messageCheckIntervalInSeconds": 1.0,
+    "numberOfConnectionRetries": 1,
+    "connectionRetryInterval": 5,
+    "autoRecoveryInterval": 10,
+    "exchanges": {
+      "worldExchange": "people_exchange_main",
+      "karmaExchange": "karma_exchange_main"
+    },
+    "listeningTopics": [
+      "karma_exchange_main.*",
+      "people_exchange_main.*"
+    ]
+  }
 }
