Updated rabbit mq settings

--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -22,7 +22,7 @@
     },
     "listeningTopics": [
       "karma_exchange_main.*",
-      "people_exchange_main.*"
+      "people_exchange_main.person.*"
     ]
   }
 }
