--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -23,7 +23,7 @@
     },
     "listeningTopics": [
       "karma_exchange_main.*",
-      "people_exchange_main.*"
+      "people_exchange_main.person.*"
     ]
   }
 }
