--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -21,7 +21,7 @@
       "karmaExchange": "karma_exchange_main"
     },
     "listeningTopics": [
-      "karma_exchange_main.*",
+      "karma_exchange_main.clock.*",
       "people_exchange_main.person.*"
     ]
   }
