--- a/Api/Properties/launchSettings.json
+++ b/Api/Properties/launchSettings.json
@@ -20,18 +20,11 @@
     "WorldManagementApi": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "",
+      "useSSL": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5053;http://localhost:5003"
-    },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-      "publishAllPorts": true,
-      "useSSL": true
+      "applicationUrl": "http://localhost:5053"
     }
   }
 }
